aligned items in success modal. Also fixed lambda function.

--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,12 @@ body {
   margin-top: 5px;
 }
 
+.success-modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* Success message */
 .success-message {
   color: white;
